--- a/youtube/package.json
+++ b/youtube/package.json
@@ -19,7 +19,6 @@
     "express": "^4.21.2",
     "mongodb": "^6.14.0",
     "ws": "^8.18.1",
-    "mysql2": "^3.9.2",
-    "selenium-webdriver": "^4.26.1"
+    "mysql2": "^3.9.2"
   }
 }
